--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ body{font-family:Georgia,serif;background:linear-gradient(135deg,#0a0e27,#1a1034
 <div class="popup-bg hidden" id="limitPopup"><div class="popup"><h3 id="limitTitle">Límite diario alcanzado</h3><p id="limitMsg">Usaste tus 3 juegos gratis hoy</p><a href="https://hooporiapr-oss.github.io/akashic-works/">Volver al Inicio</a><button id="upgradeBtn">Desbloquear Ilimitado</button></div></div>
 <script>
 (function(){
-var PK="ak_pins",UK="ak_users",SK="cmes2_stats_",DK="cmes2_device",MAX_DAILY=3,MAX_DAYS=3,ROUNDS=20,ROUND_TIME=3000;
+var PK="ak_pins",UK="ak_users",SK="cmes2_stats_",DK="ak_dev",MAX_DAILY=3,MAX_DAYS=3,ROUNDS=20,ROUND_TIME=3000;
 var colors=[{name:"ROJO",hex:"#e74c3c"},{name:"AZUL",hex:"#3498db"},{name:"VERDE",hex:"#2ecc71"},{name:"AMARILLO",hex:"#f1c40f"},{name:"MORADO",hex:"#9b59b6"},{name:"NARANJA",hex:"#e67e22"}];
 var currentPin="",currentUser=null,score=0,round=0,correct=0,streak=0,bestStreak=0,currentAnswer="",timerInt=null,roundStart=0;
 function $(id){return document.getElementById(id)}
@@ -98,8 +98,8 @@ function getUser(h){return getUsers()[h]||null}
 function saveUser(h,d){var u=getUsers();u[h]=d;saveUsers(u)}
 function getDeviceId(){var id=localStorage.getItem(DK);if(!id){id="dev_"+Date.now()+"_"+Math.random().toString(36).substr(2,9);localStorage.setItem(DK,id)}return id}
 function getToday(){var d=new Date();return d.getFullYear()+"-"+(d.getMonth()+1)+"-"+d.getDate()}
-function getDeviceTries(){try{var t=JSON.parse(localStorage.getItem(DK+"_tries"));if(t&&t.startDate)return t}catch(e){}return{n:0,d:getToday(),startDate:getToday()}}
-function setDeviceTries(t){localStorage.setItem(DK+"_tries",JSON.stringify(t))}
+function getDeviceTries(){try{var t=JSON.parse(localStorage.getItem("ak_trial"));if(t&&t.startDate)return t}catch(e){}return{n:0,d:getToday(),startDate:getToday()}}
+function setDeviceTries(t){localStorage.setItem("ak_trial",JSON.stringify(t))}
 function getDaysDiff(s){return Math.floor((new Date()-new Date(s))/864e5)}
 function canPlay(){var t=getDeviceTries(),today=getToday(),days=getDaysDiff(t.startDate);if(days>=MAX_DAYS)return{ok:false,left:0,expired:true,daysLeft:0};if(t.d!==today){t.n=0;t.d=today;setDeviceTries(t)}return{ok:t.n<MAX_DAILY,left:MAX_DAILY-t.n,expired:false,daysLeft:MAX_DAYS-days}}
 function useTry(){var t=getDeviceTries(),today=getToday();if(t.d!==today){t.n=0;t.d=today}t.n++;setDeviceTries(t);showBanner()}
